tests/js/invalid/list/mixed-types.buri
-- types are mixed
mixed = [1, "two"]